# MPMDN

./: .gitignore  CMakeLists.txt  README.md  Rectangle_plannning.py  readme.txt
Data/S2D/: S2D_Rigidbody_Path.npy  S2D_Two_Link_Path.npy  S2D_env_100_rec.npy
cpp/include/: -home-wyh-Code-MPMDN-cpp-.txt  eigenmvn.h  mpmdn.h  mpn.h  mppn.h
cpp/src/: bind.cpp  guass_test.cpp  main.cpp  mpmdn.cpp  mpn.cpp  mppn.cpp  test.cpp  test_eigenmvn.cpp
src/: 3d_figure.html  Rectangle_plannning.py  Visualization.py  compare_by_node.sh  compare_by_node_cnt.py  compare_classical.py  compare_classical.sh  compare_nnplan.py  compare_nnplan.sh  env_robot.py  generate_data.py  generate_data.sh  generate_data_table_case.sh  get_statistics.py  model_test.py  moveit_arm.py  mytest.py  plan_ompl.py  planning.py  readme.txt  test_0914.html  utility.py  visualization.py
src/from_moveit_workspace/: mytest.py
